<resources>
    <string name="app_name">MoviFliq</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="movie_title">Movie title</string>
    <string name="release_year">Release year</string>
    <string name="text">text</string>
    <string name="welcome_dennis">Welcome Dennis</string>
    <string name="relax">Let\'s relax and watch a movie !</string>
    <string name="categories">Categories</string>
    <string name="view_all">view all</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="action">Action</string>
    <string name="comedy">Comedy</string>
    <string name="romance">Romance</string>
    <string name="documentary">Documentary</string>
    <string name="latest_movies">Latest Movies</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="textview">TextView</string>
    <string name="superhero">Superhero</string>
    <string name="idmb">IDMB</string>
    <string name="vote_count">VOTE COUNT</string>
</resources>